--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
   font-family: "Rubik";
   font-style: normal;
   font-weight: 400;
-  src: url("../fonts/rubik/rubik-400.woff2") format("woff2");
+  src: url("../fonts/rubik/Rubik.woff2") format("woff2");
   font-display: swap;
 }
 
@@ -11,7 +11,7 @@
   font-family: "Rubik";
   font-style: normal;
   font-weight: 700;
-  src: url("../fonts/rubik/rubik-700.woff2") format("woff2");
+  src: url("../fonts/rubik/Rubikbold.woff2") format("woff2");
   font-display: swap;
 }
 
@@ -801,7 +801,7 @@ body {
   align-items: center;
   color: #ffffff;
   position: absolute;
-  right: 49px;
+  right: 47px;
   top: 82px;
 }
 
@@ -1264,7 +1264,7 @@ a.yellow-button:not([href]) {
   font-weight: 700;
   font-size: 18px;
   line-height: 20px;
-  /*letter-spacing: -0.02em; по пиксель перфект не сошлось*/
+  letter-spacing: -0.02em;
   color: #000000;
   display: flex;
   align-items: baseline;
@@ -1277,7 +1277,7 @@ a.yellow-button:not([href]) {
   width: 8px;
   height: 8px;
   content: " ";
-  margin-right: 26px;
+  margin-right: 28px;
   border-radius: 50%;
   transform: translateY(-25%) translateX(2px);
   order: -1;
@@ -1303,7 +1303,6 @@ a.yellow-button:not([href]) {
   margin-block-end: 15px;
   margin-inline-start: 0;
   margin-inline-end: 0;
-  letter-spacing: 0.01em;
 }
 
 .about-item .contacts-phone {
@@ -2243,7 +2242,7 @@ a.yellow-button:not([href]) {
   font-weight: 700;
   font-size: 18px;
   line-height: 20px;
-  letter-spacing: -0.1px;
+  letter-spacing: -0.02em;
   margin-block-start: 0;
   margin-block-end: 0;
 }
