--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-/* тут важен порядок */
 @font-face {
   font-family: "Rubik";
   font-style: normal;
@@ -895,7 +894,6 @@ body {
   padding-top: 12px;
 }
 
-/*---*/
 .slider button:hover {
   opacity: 0.6;
 }
@@ -946,7 +944,6 @@ body {
   background-color: #ffe17f;
   position: relative;
   margin-bottom: 33px;
-  /*transition: background-color 0.5s;*/
 }
 
 .catalog-categories-link-div::after {
@@ -1077,6 +1074,7 @@ body {
 
 .tabs-button-active:focus {
   outline: 2px solid #af4fff;
+  outline-offset: 2px;
   box-shadow: none;
 }
 
@@ -1443,12 +1441,10 @@ a.yellow-button:not([href]) {
   opacity: 0.3;
 }
 
-/*----*/
-
 .mailing-cotainer .its-free {
   grid-area: d;
   justify-self: end;
-  padding-left: 30px;
+  padding-left: 32px;
   position: relative;
 }
 
@@ -1497,6 +1493,10 @@ a.yellow-button:not([href]) {
   font-size: 16px;
   line-height: 20px;
   color: #ffffff;
+}
+
+.contacts-phone {
+  letter-spacing: 0.01em;
 }
 
 .yellow-line {
@@ -2066,7 +2066,7 @@ a.yellow-button:not([href]) {
 
 .tooltip {
   position: absolute;
-  margin-left: 9px;
+  margin-left: 10px;
   display: inline-block;
   transform: translateY(-15%);
 }
@@ -2155,7 +2155,7 @@ a.yellow-button:not([href]) {
   content: "";
   position: absolute;
   top: 50%;
-  right: -20px;/*16 по макету*/
+  right: -20px;
   width: 4px;
   height: 7px;
   opacity: 0.2;
@@ -2232,7 +2232,6 @@ a.yellow-button:not([href]) {
   position: relative;
 }
 
-/*.catalog-filter-group::before*/
 .catalog-filter-title::before {
   content: "";
   background-color: #000000;
@@ -2297,6 +2296,10 @@ a.yellow-button:not([href]) {
   margin-bottom: 18px;
 }
 
+.whith-radio .catalog-filter-item:not(:last-child) {
+  margin-bottom: 21px;
+}
+
 .control-label {
   font-size: inherit;
   line-height: inherit;
@@ -2354,9 +2357,17 @@ a.yellow-button:not([href]) {
   border: 2px solid #cccccc;
 }
 
-.control-input:focus + .control-mark {
+.control-mark::after {
+  display: block;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  content: "";
+}
+
+.control-input:focus + .control-mark::after {
   outline: 2px solid #af4fff;
-  outline-offset: 2px;
+  outline-offset: 4px;
   box-shadow: none;
 }
 
@@ -2391,11 +2402,12 @@ a.yellow-button:not([href]) {
   position: absolute;
   width: 18px;
   height: 18px;
-  box-sizing: border-box;
   background: #ebebeb;
   border: 2px solid #000000;
   border-radius: 50%;
   cursor: pointer;
+  padding: 0;
+  display: flex;
 }
 
 .range-toggle:hover {
@@ -2407,8 +2419,18 @@ a.yellow-button:not([href]) {
 }
 
 .range-toggle:focus {
+  box-shadow: none;
+  outline: none;
+}
+
+.range-toggle:focus::before {
+  content: " ";
+  width: 100%;
+  height: 100%;
+  display: block;
+  pointer-events: none;
   outline: 2px solid #af4fff;
-  outline-offset: 2px;
+  outline-offset: 4px;
   box-shadow: none;
 }
 
@@ -2471,7 +2493,7 @@ a.yellow-button:not([href]) {
 
 .catalog-filter .yellow-button {
   width: 220px;
-  margin-top: 39px;
+  margin-top: 36px;
 }
 
 .catalog-right-column {
@@ -2607,11 +2629,14 @@ a.yellow-button:not([href]) {
   box-shadow: none;
 }
 
+.product-card-link:focus .product-card-image-content {
+  outline: 1px solid #444444;
+  outline-offset: -1px;
+}
+
 .product-card-image-content {
   position: relative;
   margin-bottom: 32px;
-  outline: 1px solid #444444;
-  outline-offset: -1px;
   background-color: #efefef;
 }
 
